# ntp-client

./: .travis.yml  CMakeLists.txt  NTPClient.cpp  NTPClient.h  README.md  manifest.xml
include/: NTPClient.h
src/: NTPClient.cpp
